Add workspace path information to psEditor.Workspace API
This change adds a new Path property to the EditorWorkspace class which
gets exposed through to the psEditor API.  This is useful for extension
authors who want to perform operations based on the workspace path.

Resolves #236.

--- a/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
+++ b/test/PowerShellEditorServices.Test/PowerShellEditorServices.Test.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Console\ConsoleServiceTests.cs" />
     <Compile Include="Console\ChoicePromptHandlerTests.cs" />
     <Compile Include="Session\ScriptFileTests.cs" />
+    <Compile Include="Session\WorkspaceTests.cs" />
     <Compile Include="Utility\AsyncDebouncerTests.cs" />
     <Compile Include="Utility\AsyncLockTests.cs" />
     <Compile Include="Utility\AsyncQueueTests.cs" />
