Add TemplateService for Plaster integration
This change introduces a new TemplateService which uses the new Plaster
module to provide the following features:

1. Listing available Plaster templates on the user's machine, both
built-in and contained within other PowerShell modules

2. Creating new projects from Plaster templates

This functionality is exposed up through the language service by the
powerShell/getProjectTemplates and powerShell/newProjectFromTemplate
request types.

--- a/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
+++ b/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
@@ -62,6 +62,7 @@
     <Compile Include="LanguageServer\InstallModuleRequest.cs" />
     <Compile Include="LanguageServer\PowerShellVersionRequest.cs" />
     <Compile Include="LanguageServer\SetPSSARulesRequest.cs" />
+    <Compile Include="LanguageServer\ProjectTemplate.cs" />
     <Compile Include="MessageProtocol\Channel\NamedPipeClientChannel.cs" />
     <Compile Include="MessageProtocol\Channel\NamedPipeServerChannel.cs" />
     <Compile Include="MessageProtocol\Channel\TcpSocketClientChannel.cs" />
