Add support for Enter-PSSession and Enter-PSHostProcess
This change adds support for remote sessions (PSv4+) and attaching to
processes on the same machine (PSv5+).

--- a/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
+++ b/src/PowerShellEditorServices.Protocol/PowerShellEditorServices.Protocol.csproj
@@ -61,6 +61,7 @@
     <Compile Include="LanguageServer\FindModuleRequest.cs" />
     <Compile Include="LanguageServer\InstallModuleRequest.cs" />
     <Compile Include="LanguageServer\PowerShellVersionRequest.cs" />
+    <Compile Include="LanguageServer\RunspaceChanged.cs" />
     <Compile Include="LanguageServer\SetPSSARulesRequest.cs" />
     <Compile Include="LanguageServer\ProjectTemplate.cs" />
     <Compile Include="MessageProtocol\Channel\NamedPipeClientChannel.cs" />
