--- a/src/PowerShellEditorServices/Nano.PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/Nano.PowerShellEditorServices.csproj
@@ -39,6 +39,9 @@
     <Compile Include="..\PowerShellEditorServices.Protocol\LanguageServer\GetPSSARulesRequest.cs">
       <Link>GetPSSARulesRequest.cs</Link>
     </Compile>
+    <Compile Include="..\PowerShellEditorServices.Protocol\LanguageServer\ScriptFileMarkersRequest.cs">
+      <Link>ScriptFileMarkersRequest.cs</Link>
+    </Compile>
     <Compile Include="..\PowerShellEditorServices.Protocol\LanguageServer\SetPSSARulesRequest.cs">
       <Link>SetPSSARulesRequest.cs</Link>
     </Compile>
