Add RemoteFileManager to manage remote files
This change adds a new RemoteFileManager class which manages files which
are opened when a remote session is active.  It handles the gathering of
remote file contents and mapping remote files paths to a local cache.  It
also keeps track of the remote files which were opened in the editor and
closes them once the remote session has been exited.

--- a/src/PowerShellEditorServices/Nano.PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/Nano.PowerShellEditorServices.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Session\PowerShellVersionDetails.cs" />
     <Compile Include="Session\ProfilePaths.cs" />
     <Compile Include="Session\ProgressDetails.cs" />
+    <Compile Include="Session\RemoteFileManager.cs" />
     <Compile Include="Session\RunspaceHandle.cs" />
     <Compile Include="Session\SessionPSHost.cs" />
     <Compile Include="Session\SessionPSHostRawUserInterface.cs" />
