Add artifact versioning, packaging, and publishing to .build.ps1

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,26 +1,12 @@
-version: '$(core_version).{build}'
+version: '0.9.0.{build}'
 os: WMF 5
 clone_depth: 10
 skip_tags: true
-
-environment:
-  core_version: '0.9.0'
-  prerelease_name: '-beta'
 
 branches:
   only:
   - master
   - develop
-
-# NOTE: If you need to debug a problem with the AppVeyor build, uncomment the
-#       following two lines and push them to your PR branch.  Once the next
-#       build starts you will see RDP connection details written out to the
-#       build console.  **DON'T FORGET TO REMOVE THIS COMMIT BEFORE MERGING!**
-
-#init:
-#- ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-
-# TODO: Work build number into build!
 
 install:
   - ps: |
@@ -35,3 +21,6 @@ test:
     - Microsoft.PowerShell.EditorServices.Test.dll
     - Microsoft.PowerShell.EditorServices.Test.Protocol.dll
     - Microsoft.PowerShell.EditorServices.Test.Host.dll
+
+after_test:
+  - ps: Invoke-Build UploadTestLogs -Configuration Release
